--- a/paginas/sablewood/sablewood.css
+++ b/paginas/sablewood/sablewood.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: var(--light-bg);
+    background-color: #27ae60
 }
 
 /* SIDEBAR */
@@ -70,6 +70,7 @@ body {
 
 .content {
     padding: 40px;
+    background-color: #ffffff !important;
 }
 
 .section-title {
